--- a/app/src/main/res/layout/activity_courier_main.xml
+++ b/app/src/main/res/layout/activity_courier_main.xml
@@ -26,6 +26,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation_clinet" />
+        app:menu="@menu/navigation_courier" />
 
 </android.support.constraint.ConstraintLayout>
