--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/iv_avatar"
+        android:id="@+id/v_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginBottom="8dp"
@@ -27,8 +27,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
-        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
+        app:layout_constraintStart_toEndOf="@+id/v_image"
+        app:layout_constraintTop_toTopOf="@+id/v_image"
         tools:text="Ariana" />
 
     <TextView
