--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:layout_marginBottom="3dp"
-    tools:layout_marginEnd="10dp"
-    tools:layout_marginStart="10dp"
-    tools:layout_marginTop="3dp">
+    android:layout_marginBottom="10dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/v_transport_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/iv_avatar"
+            android:id="@+id/v_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginBottom="8dp"
@@ -28,26 +34,25 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/v_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
             android:textColor="@android:color/background_dark"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
-            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/v_image"
+            app:layout_constraintTop_toTopOf="@+id/v_image" />
 
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/v_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
-            app:layout_constraintStart_toStartOf="@+id/textView16" />
+            app:layout_constraintStart_toStartOf="@+id/v_name"
+            app:layout_constraintTop_toBottomOf="@+id/v_name" />
     </android.support.constraint.ConstraintLayout>
 
 
