--- a/app/src/main/res/layout/tmp_courier_profile.xml
+++ b/app/src/main/res/layout/tmp_courier_profile.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="16dp">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/v_avatar"
+                android:id="@+id/v_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="8dp"
@@ -34,8 +34,8 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/v_avatar"
-                app:layout_constraintTop_toTopOf="@+id/v_avatar"
+                app:layout_constraintStart_toEndOf="@+id/v_image"
+                app:layout_constraintTop_toTopOf="@+id/v_image"
                 app:srcCompat="@drawable/best" />
 
             <TextView
@@ -68,8 +68,8 @@
                 android:layout_height="30dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="32dp"
-                app:layout_constraintBottom_toBottomOf="@+id/v_avatar"
-                app:layout_constraintStart_toEndOf="@+id/v_avatar"
+                app:layout_constraintBottom_toBottomOf="@+id/v_image"
+                app:layout_constraintStart_toEndOf="@+id/v_image"
                 app:srcCompat="@drawable/call2" />
 
             <TextView
@@ -107,9 +107,9 @@
                 android:text="TextView"
                 android:textColor="@android:color/background_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/v_avatar"
-                app:layout_constraintStart_toStartOf="@+id/v_avatar"
-                app:layout_constraintTop_toBottomOf="@+id/v_avatar" />
+                app:layout_constraintEnd_toEndOf="@+id/v_image"
+                app:layout_constraintStart_toStartOf="@+id/v_image"
+                app:layout_constraintTop_toBottomOf="@+id/v_image" />
 
         </android.support.constraint.ConstraintLayout>
 
