--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:padding="10dp"
         android:text="Sign Up"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
