--- a/app/src/main/res/layout/item_posted_order.xml
+++ b/app/src/main/res/layout/item_posted_order.xml
@@ -27,8 +27,9 @@
             android:id="@+id/v_order_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="@+id/include"
             app:layout_constraintTop_toTopOf="@+id/include"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
