--- a/app/src/main/res/layout/activity_offer_new.xml
+++ b/app/src/main/res/layout/activity_offer_new.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:orientation="vertical">
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/bg_grey"
-        app:layout_constraintBottom_toTopOf="@+id/v_accept"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/bg_grey">
 
 
         <android.support.v7.widget.CardView
@@ -48,6 +46,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:ems="10"
+                    android:focusable="false"
                     android:hint="@string/test_text_s"
                     android:inputType="textPersonName"
                     android:padding="5dp"
@@ -67,6 +66,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:ems="10"
+                    android:focusable="false"
                     android:hint="@string/test_text_s"
                     android:inputType="textPersonName"
                     android:padding="5dp"
@@ -86,6 +86,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:ems="10"
+                    android:focusable="false"
                     android:hint="@string/test_text_s"
                     android:inputType="textPersonName"
                     android:padding="5dp"
@@ -105,13 +106,14 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
                     android:ems="10"
+                    android:focusable="false"
                     android:hint="@string/test_text_s"
                     android:inputType="textPersonName"
                     android:padding="5dp"
                     android:singleLine="false" />
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/v_comment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
@@ -133,6 +135,7 @@
                     android:textColor="@android:color/background_dark" />
 
                 <TextView
+                    android:id="@+id/v_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -147,16 +150,13 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/v_accept"
-        android:layout_width="0dp"
+        android:id="@+id/v_create"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="Button"
-        android:textColor="@color/cardview_light_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="New Offer"
+        android:textColor="@color/cardview_light_background" />
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
