--- a/app/src/main/res/layout/activity_offer_new.xml
+++ b/app/src/main/res/layout/activity_offer_new.xml
@@ -35,7 +35,7 @@
                     android:background="@drawable/et_bg"
                     android:ems="10"
                     android:hint="@string/test_text_s"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:padding="5dp"
                     android:singleLine="false" />
 
