--- a/app/src/main/res/layout/fragment_courier_profile.xml
+++ b/app/src/main/res/layout/fragment_courier_profile.xml
@@ -20,199 +20,10 @@
             app:title="Contact" />
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <include
+        layout="@layout/activity_courier_profile"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:orientation="vertical">
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="16dp">
-
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/v_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/avatar"
-                app:civ_border_color="@color/colorPrimary"
-                app:civ_border_width="2dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/v_rating_icon"
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/v_image"
-                app:layout_constraintTop_toTopOf="@+id/v_image"
-                app:srcCompat="@drawable/best" />
-
-            <TextView
-                android:id="@+id/v_ration_2dot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text=":"
-                android:textColor="@android:color/background_dark"
-                app:layout_constraintBottom_toBottomOf="@+id/v_rating_icon"
-                app:layout_constraintStart_toEndOf="@+id/v_rating_icon"
-                app:layout_constraintTop_toTopOf="@+id/v_rating_icon" />
-
-            <TextView
-                android:id="@+id/v_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textColor="@android:color/background_dark"
-                app:layout_constraintBottom_toBottomOf="@+id/v_ration_2dot"
-                app:layout_constraintStart_toEndOf="@+id/v_ration_2dot"
-                app:layout_constraintTop_toTopOf="@+id/v_ration_2dot" />
-
-            <ImageView
-                android:id="@+id/v_1"
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="32dp"
-                app:layout_constraintBottom_toBottomOf="@+id/v_image"
-                app:layout_constraintStart_toEndOf="@+id/v_image"
-                app:srcCompat="@drawable/call2" />
-
-            <TextView
-                android:id="@+id/v_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text=":"
-                android:textColor="@android:color/background_dark"
-                app:layout_constraintBottom_toBottomOf="@+id/v_1"
-                app:layout_constraintStart_toEndOf="@+id/v_1"
-                app:layout_constraintTop_toTopOf="@+id/v_1" />
-
-            <TextView
-                android:id="@+id/v_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textColor="@android:color/background_dark"
-                app:layout_constraintBottom_toBottomOf="@+id/v_2"
-                app:layout_constraintStart_toEndOf="@+id/v_2"
-                app:layout_constraintTop_toTopOf="@+id/v_2" />
-
-            <TextView
-                android:id="@+id/v_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
-                android:textColor="@android:color/background_dark"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/v_image"
-                app:layout_constraintStart_toStartOf="@+id/v_image"
-                app:layout_constraintTop_toBottomOf="@+id/v_image" />
-
-        </android.support.constraint.ConstraintLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="sdasd :" />
-
-            <TextView
-                android:id="@+id/v_experience"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="sdasd :" />
-
-            <TextView
-                android:id="@+id/v_citizenship"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="sdasd :" />
-
-            <TextView
-                android:id="@+id/v_city"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="sdasd :" />
-
-            <TextView
-                android:id="@+id/v_dob"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
+        android:layout_height="wrap_content" />
 
 
-    </LinearLayout>
 </LinearLayout>
