--- a/app/src/main/res/layout/fragment_list_toolbar.xml
+++ b/app/src/main/res/layout/fragment_list_toolbar.xml
@@ -21,12 +21,10 @@
             app:title="Contact" />
     </android.support.design.widget.AppBarLayout>
 
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.yesat.car.ui.courier.transport.TransportListFragment"
+    <include
+        layout="@layout/tmp_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/tmp_recycler_view"/>
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
