--- a/app/src/main/res/menu/menu_filter.xml
+++ b/app/src/main/res/menu/menu_filter.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/new_order"
-        android:icon="@android:drawable/ic_menu_add"
+        android:id="@+id/filter"
+        android:icon="@android:drawable/ic_menu_manage"
         android:title="new order"
         app:showAsAction="always" />
 </menu>
