--- a/app/src/main/res/layout/activity_courier_offer_profile.xml
+++ b/app/src/main/res/layout/activity_courier_offer_profile.xml
@@ -16,6 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="accept"
+        android:text="@string/accept"
         android:textColor="@color/cardview_light_background" />
 </LinearLayout>
